--- a/.hintrc
+++ b/.hintrc
@@ -15,7 +15,9 @@
         "ignore": [
           "scrollbar-width",
           "scrollbar-width: thin",
-          "scrollbar-color"
+          "scrollbar-color",
+          "overscroll-behavior",
+          "overscroll-behavior: auto"
         ]
       }
     ]
